--- a/css/styles.css
+++ b/css/styles.css
@@ -400,7 +400,9 @@ body {
   height: auto;
   opacity: 1;
 }
-.hasChildmenu .subMenu .subMenu_back{display: none;}
+.hasChildmenu .subMenu .subMenu_back,
+.hasChildmenu .c-link .icon{display: none;}
+
 
 @media (max-width: 1024px) {
 }
@@ -454,7 +456,7 @@ body {
   .c-header .header_logo {
     max-width: 100%;
     float: left;
-    width: calc(100% - 70px);
+    width: calc(100% - 140px);
     text-align: center;
     padding: 4px 0 0;
   }
@@ -548,7 +550,7 @@ body {
     max-height: 100vh;
     height: 100vh;
     z-index: 10;
-    padding: 36px;
+    padding: 36px !important;
     width: calc(100% + 10px);
     transition: all ease 0.3s;
   }
@@ -557,10 +559,11 @@ body {
   }
   .hasChildmenu .c-link .icon{
     display: inline-block;
-    font-size: 17px;
+    font-size: 13px;
     line-height: 14px;
     position: relative;
     top: 1px;
+    left: -2px;
   }
 }
 
@@ -584,12 +587,17 @@ body {
   padding: 48px 80px;
   min-height: 355px;
 }
+.c-imgBlock.xs{
+  padding: 48px 80px;
+  min-height: 293px;
+}
 .c-imgBlock.i2 {background-image:url("../images/p2.jpeg") ;}
 .c-imgBlock.i2 .infoBlock{
   padding: 78px 0;
 }
 .c-imgBlock.i3 {background-image:url("../images/contact.jpg");}
 .c-imgBlock.i4 {background-image:url("../images/image-asset-3.jpg");}
+.c-imgBlock.i5 {background-image:url("../images/client-bg.jpg");}
 
 .c-imgBlock.mastery-team {background-image:url("../images/mastery-team.jpg"); background-position: center;}
 .c-imgBlock.mastery-leader {background-image:url("../images/mastery-leader.jpg"); background-position: center;}
@@ -646,6 +654,7 @@ body {
   line-height: 26px;
   margin: 16px 0;
   position: relative;
+  letter-spacing: 0.03em;
 }
 
 .infoStaticText {
@@ -766,7 +775,7 @@ body {
   .c-imgBlock {
     padding: 60px 20px;
     width: 100%;
-    height: 375;
+    min-height: 406px;
     box-sizing: border-box;
   }
   .c-imgBlock .infoBlock {
@@ -838,6 +847,8 @@ body {
   font-weight: bold;
   display: inline-block;
 }
+
+.c-player{margin-bottom: 34px;}
 .c-player,
 .c-player img {
   display: block;
@@ -1343,6 +1354,7 @@ body {
   letter-spacing: .06em;
   line-height: 1em;
   margin-bottom: 18px;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 .contactInfo{
   display: block;
@@ -1404,7 +1416,10 @@ body {
   box-sizing: border-box;
   outline: none;
   border-radius: 2px;
+  box-shadow: none;
+  transition: all ease 0.3s;
 }
+.c-formGroup .form-control:focus{background-color: #fff;}
 
 .formSection .c-formBtn{
   color: #fff;
@@ -1437,11 +1452,14 @@ body {
   text-transform: none;
 }
 .infoListing li .link{
+  color: #000;
   text-decoration: none;
   border-bottom: 1px solid rgba(0,0,0,.3);
   padding-bottom: 1px;
   outline: none;
+  transition: all ease 0.3s;
 }
+.infoListing li .link:hover{color: #707070;}
 
 .titleStaticText{
   font-family: "futura-pt";
@@ -1450,7 +1468,7 @@ body {
   text-align: center;
   font-weight: 700;
   font-size: 12px;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.09em;
   line-height: 17px;
   text-transform: none;
   margin-top: 6px;
@@ -1463,3 +1481,14 @@ body {
 }
 .text-center{text-align: center;}.inlineBlock{display: inline-block;}
 .pad0{padding: 0 !important;}
+.watchVideoLabel{
+  display: block;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 16px;
+  letter-spacing: .03em;
+  line-height: 1.61em;
+  text-transform: none;
+  color: #707070;
+  margin-bottom: 0;
+}
